# FastChat

./: .gitignore  CMakeLists.txt  README.md  flodtree.txt  resources.qrc
.obsidian/: workspace.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_REFACTOR_PLAN.md  DEVELOPMENT_PLAN.MD  DEVELOPMENT_PLAN_V2.md  IMPLEMENTATION_RETRY_RECONNECT.md  MANUAL.md  TECHNICAL_RETRY_RECONNECT.md  TEST_NETWORK_RELIABILITY.md  WEEKLY_LOGS.MD
docs/design/: 001主界面ChatMainWindow.drawio  002登陆界面LoginDialog.drawio
scripts/: README.md  build-release.ps1  compile.ps1  genrate-tree.ps1  rebuild.ps1
src/: main.cpp
src/core/: ApiService.cpp  ApiService.h  AppConfig.h  FriendModel.cpp  FriendModel.h  IAuthService.h  ImageLoader.h  MessageModel.cpp  MessageModel.h  MessageQueue.cpp  MessageQueue.h  MockAuthService.cpp  MockAuthService.h  RetryPolicy.cpp  RetryPolicy.h  SessionManager.cpp  SessionManager.h  WebSocketClient.cpp  WebSocketClient.h  configmanager.cpp  configmanager.h
src/ui/: AvatarHelper.h  ClickableLabel.cpp  ClickableLabel.h  FramelessWindowHelper.h  FriendDelegate.cpp  FriendDelegate.h  FriendInfoDialog.cpp  FriendInfoDialog.h  FriendInfoDialog.ui  FriendManagementDialog.cpp  FriendManagementDialog.h  FriendManagementDialog.ui  FriendRequestDelegate.cpp  FriendRequestDelegate.h  ImageCropDialog.cpp  ImageCropDialog.h  MessageDelegate.cpp  MessageDelegate.h  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  SearchResultsDialog.cpp  SearchResultsDialog.h  UserDelegate.cpp  UserDelegate.h  chatmainwindow.cpp  chatmainwindow.h  chatmainwindow.ui  logindialog.cpp  logindialog.h  logindialog.ui
src/utils/: logger.cpp  logger.h
